force-app/main/default/objects/Route__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <type>Number</type><precision>12</precision><scale>2</scale>
</CustomField>