force-app/main/default/objects/Route__c/fields/Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_KM__c</fullName>
    <label>Distance KM</label>
    <type>Number</type><precision>18</precision><scale>2</scale>
</CustomField>