force-app/main/default/objects/Route__c/fields/Planned_End__c.field-meta.xml
<CustomField>
    <fullName>Planned_End__c</fullName>
    <label>Planned End</label>
    <type>DateTime</type>
</CustomField>