force-app/main/default/objects/Route__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <label>Planned Start</label>
    <type>DateTime</type>
</CustomField>