force-app/main/default/objects/Route__c/fields/Route_Code__c.field-meta.xml
<CustomField>
    <fullName>Route_Code__c</fullName>
    <label>Route Code</label>
    <type>Text</type><length>100</length>
</CustomField>