force-app/main/default/objects/Route__c/fields/Route_Status__c.field-meta.xml
        <CustomField>
            <fullName>Route_Status__c</fullName>
            <label>Route Status</label>
            <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Planned</fullName><default>false</default><label>Planned</label></value>
<value><fullName>Active</fullName><default>false</default><label>Active</label></value>
<value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
<value><fullName>Delayed</fullName><default>false</default><label>Delayed</label></value></valueSetDefinition></valueSet>
        </CustomField>