force-app/main/default/objects/Route__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type><length>255</length>
</CustomField>